@@ -6,53 +6,49 @@
 # This file is free software. The copyright owner gives unlimited
 # permission to copy, distribute and modify it.
 
-EXTRA_DIST = gnome-mime-chemical.svg
+EXTRA_DIST = $(icon_sources)
 
 CLEANFILES = *.png *.svgz
 
 MAINTAINERCLEANFILES = Makefile.in
 
 
-ICONS = gnome-mime-chemical
-
-SIZES = 16 22 24 32 36 48 64 72 96 128 192
+icon_sources = gnome-mime-chemical.svg
+icon_sizes   = 16 22 24 32 36 48 64 72 96 128 192
 
 
 if BOOL_GNOME_THEME
 
 %.svgz : %.svg
 	gzip $< -c > $@
-	for size in $(SIZES) ; do \
+	for size in $(icon_sizes) ; do \
 		if test "x$(RSVG)" != "x" ; then \
-			$(RSVG) -w "$$size" -h "$$size" -f png $(top_srcdir)/icons/hicolor/$*.svg $*_"$$size".png ; \
+			$(RSVG) -w $${size} -h $${size} -f png $< $*_$${size}.png ; \
 		else \
-			$(CONVERT) $(top_srcdir)/icons/hicolor/$*.svg -resize "$$size"x"$$size" $*_"$$size".png ; \
+			$(CONVERT) $< -resize $${size}x$${size} $*_$${size}.png ; \
 		fi \
 	done
 
-all-local: all-icons
-
-all-icons:
-	for icon in $(ICONS) ; do \
-		$(MAKE) "$$icon".svgz ; \
-	done
+all-local: $(icon_sources:.svg=.svgz)
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(DIR_GNOMETHEME)
-	for icon in $(ICONS) ; do \
+	for file in $(icon_sources) ; do \
+		icon=`echo $${file} | sed -e 's/\.svg$$//'` ; \
 		$(mkinstalldirs) $(DESTDIR)$(DIR_GNOMETHEME)/scalable/mimetypes ; \
-		$(INSTALL_DATA) "$$icon".svgz $(DESTDIR)$(DIR_GNOMETHEME)/scalable/mimetypes ; \
-		for size in $(SIZES) ; do \
-			$(mkinstalldirs) $(DESTDIR)$(DIR_GNOMETHEME)/"$$size"x"$$size"/mimetypes ; \
-			$(INSTALL_DATA) "$$icon"_"$$size".png $(DESTDIR)$(DIR_GNOMETHEME)/"$$size"x"$$size"/mimetypes/"$$icon".png ; \
+		$(INSTALL_DATA) $${icon}.svgz $(DESTDIR)$(DIR_GNOMETHEME)/scalable/mimetypes ; \
+		for size in $(icon_sizes) ; do \
+			$(mkinstalldirs) $(DESTDIR)$(DIR_GNOMETHEME)/$${size}x$${size}/mimetypes ; \
+			$(INSTALL_DATA) $${icon}_$${size}.png $(DESTDIR)$(DIR_GNOMETHEME)/$${size}x$${size}/mimetypes/$${icon}.png ; \
 		done \
 	done
 
 uninstall-hook:
-	for icon in $(ICONS) ; do \
-		rm -f $(DESTDIR)$(DIR_GNOMETHEME)/scalable/mimetypes/"$$icon".svgz ; \
-		for size in $(SIZES) ; do \
-			rm -f $(DESTDIR)$(DIR_GNOMETHEME)/"$$size"x"$$size"/mimetypes/"$$icon".png ; \
+	for file in $(icon_sources) ; do \
+		icon=`echo $${file} | sed -e 's/\.svg$$//'` ; \
+		rm -f $(DESTDIR)$(DIR_GNOMETHEME)/scalable/mimetypes/$${icon}.svgz ; \
+		for size in $(icon_sizes) ; do \
+			rm -f $(DESTDIR)$(DIR_GNOMETHEME)/$${size}x$${size}/mimetypes/$${icon}.png ; \
 		done \
 	done
 
